--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     <img src="./assets/facebook.png" width="20rem" height="20rem" alt="" srcset="">
                 </a>
             </div>
+            <span><a href="">zaloguj sie</a></span>
         </section>
     </footer>
 
