Fix menu height

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="fix_menu_height.js"></script>
     <script>
         /*! modernizr 3.6.0 (Custom Build) | MIT *
  * https://modernizr.com/download/?-webp-setclasses !*/
