--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         *Klikając zgadasz się na wysyłanie wiadomości marketingowych drogą elektroniczną na podstawie art.172 prawa telekomunikacyjnego. 
                     </span>
 
-                    <input type="button" name="button" class="send-button" value="Zapisz się">
+                    <input type="button" name="button" id="send-button" value="Zapisz się">
                 </form>
                 
             </div>
