--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
                     <label for="name" class="form-labels">
                         1. Podaj swoje imię.
                     </label>
-                    <input name="name" type="text" class="input">
+                    <input name="name" type="text" class="input-form">
 
                     <label for="tel" class="form-labels">
                         2. Podaj swój numer telefonu.
                     </label>
-                    <input name="tel" type="tel" class="input">
+                    <input name="tel" type="tel" class="input-form">
                     
                     <label for="email" class="form-labels">
                         3. Podaj swój adres e-mail.
                     </label>                    
-                    <input name="email" type="email" class="input">
+                    <input name="email" type="email" class="input-form">
 
                     <span class="policy-text">
                         *Klikając zgadasz się na wysyłanie wiadomości marketingowych drogą elektroniczną na podstawie art.172 prawa telekomunikacyjnego. 
