--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <span class="login"><a href="">zaloguj sie</a></span>
             </section>
         </section>
-        <p class="copyright">Copyright 2020 © Miód Malina Wszystkie Prawa Zastrzeżone</p>
+        <div class="copyright">Copyright 2020 © Miód Malina Wszystkie Prawa Zastrzeżone</div>
     </footer>
 
     <script src="scripts/fix_menu_height.js"></script>
