--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <label for="name" class="form-labels">
                         1. Podaj swoje imię.
                     </label>
-                    <input name="name" type="text" class="input-form no-error" data-error="Wpisz prawidłowe imię" pattern="^[a-z ,.'-]{1,15}" required is-validation='false'>
+                    <input name="name" type="text" class="input-form no-error" data-error="Wpisz prawidłowe imię" pattern="^[a-z ,.'-]+$" required is-validation='false'>
 
                     <label for="tel" class="form-labels">
                         2. Podaj swój numer telefonu.
